# rl_harfbuzz_textlib

./: CMakeLists.txt  README.md
.github/workflows/: build-multi-platform.yml
assets/fonts/: LICENSE.Amiri.txt
cmake/: rl_harfbuzz_textlibConfig.cmake.in
examples/: arabic.cpp  basic.cpp  c_api.c  cpp_api.cpp  type_lab.cpp
include/rl_harfbuzz_textlib/: rl_harfbuzz_textlib.h  rl_harfbuzz_textlib.hpp
src/: rl_harfbuzz_textlib.cpp  rlhb_default_font_data.h  rlhb_gl_shim.h
